--- a/.github/workflows/check-bioc-docker.yml
+++ b/.github/workflows/check-bioc-docker.yml
@@ -21,13 +21,13 @@
 ## * OS: operating system
 
 on:
-  workflow_dispatch
+  # Runs on pushes targeting the default branch
   push:
-    branches:
-      - main
+    branches: ["main"]
   pull_request:
-    branches:
-      - main
+    branches: ["main"]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 name: R-CMD-check-bioc
 
