--- a/.github/workflows/check-bioc-docker.yml
+++ b/.github/workflows/check-bioc-docker.yml
@@ -92,7 +92,7 @@ jobs:
       # which is only available with Linux as the OS.
       - name: Setup R from r-lib
         if: runner.os != 'Linux'
-        uses: r-lib/actions/setup-r@master
+        uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
           http-user-agent: ${{ matrix.config.http-user-agent }}  
@@ -100,7 +100,7 @@ jobs:
       ## pandoc is already included in the Bioconductor docker images
       - name: Setup pandoc from r-lib
         if: runner.os != 'Linux'
-        uses: r-lib/actions/setup-pandoc@master 
+        uses: r-lib/actions/setup-pandoc@v2 
         
       - name: Query dependencies
         run: |
@@ -337,7 +337,7 @@ jobs:
 
       - name: Upload check results
         if: failure()
-        uses: actions/upload-artifact@master
+        uses: actions/upload-artifact@main
         with:
           name: ${{ runner.os }}-biocversion-${{ matrix.config.bioc }}-r-${{  matrix.config.r }}-results
           path: check 
